// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for multi-ALM binding: editing a definition 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <AlmPRDecorationTable
    additionalColumnsHeaders={
      Array [
        "url",
        "app_id",
      ]
    }
    alm="github"
    definitions={
      Array [
        Object {
          "additionalColumns": Array [
            "http://github.enterprise.com",
            "123456",
          ],
          "key": "key",
        },
      ]
    }
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
  />
  <AlmPRDecorationForm
    alm="github"
    bindingDefinition={
      Object {
        "appId": "123456",
        "key": "key",
        "privateKey": "asdf1234",
        "url": "http://github.enterprise.com",
      }
    }
    help={
      <FormattedMessage
        defaultMessage="settings.pr_decoration.github.info"
        id="settings.pr_decoration.github.info"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to="/documentation/analysis/pr-decoration/"
            >
              learn_more
            </Link>,
          }
        }
      />
    }
    onCancel={[MockFunction]}
    onSubmit={[MockFunction]}
    showInModal={true}
  >
    <Component />
  </AlmPRDecorationForm>
</DeferredSpinner>
`;

exports[`should render correctly for multi-ALM binding: loaded 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <AlmPRDecorationTable
    additionalColumnsHeaders={
      Array [
        "url",
        "app_id",
      ]
    }
    alm="github"
    definitions={
      Array [
        Object {
          "additionalColumns": Array [
            "http://github.enterprise.com",
            "123456",
          ],
          "key": "key",
        },
      ]
    }
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
  />
</DeferredSpinner>
`;

exports[`should render correctly for multi-ALM binding: loading 1`] = `
<DeferredSpinner
  loading={true}
  timeout={100}
>
  <AlmPRDecorationTable
    additionalColumnsHeaders={
      Array [
        "url",
        "app_id",
      ]
    }
    alm="github"
    definitions={
      Array [
        Object {
          "additionalColumns": Array [
            "http://github.enterprise.com",
            "123456",
          ],
          "key": "key",
        },
      ]
    }
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
  />
</DeferredSpinner>
`;

exports[`should render correctly for single-ALM binding 1`] = `
<AlmPRDecorationForm
  alm="github"
  bindingDefinition={
    Object {
      "appId": "123456",
      "key": "key",
      "privateKey": "asdf1234",
      "url": "http://github.enterprise.com",
    }
  }
  help={
    <FormattedMessage
      defaultMessage="settings.pr_decoration.github.info"
      id="settings.pr_decoration.github.info"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/pr-decoration/"
          >
            learn_more
          </Link>,
        }
      }
    />
  }
  hideKeyField={true}
  loading={true}
  onCancel={[MockFunction]}
  onDelete={[MockFunction]}
  onEdit={[MockFunction]}
  onSubmit={[MockFunction]}
  readOnly={true}
  success={false}
>
  <Component />
</AlmPRDecorationForm>
`;

exports[`should render correctly for single-ALM binding 2`] = `
<AlmPRDecorationForm
  alm="github"
  bindingDefinition={
    Object {
      "appId": "123456",
      "key": "key",
      "privateKey": "asdf1234",
      "url": "http://github.enterprise.com",
    }
  }
  help={
    <FormattedMessage
      defaultMessage="settings.pr_decoration.github.info"
      id="settings.pr_decoration.github.info"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/pr-decoration/"
          >
            learn_more
          </Link>,
        }
      }
    />
  }
  hideKeyField={true}
  loading={false}
  onCancel={[MockFunction]}
  onDelete={[MockFunction]}
  onEdit={[MockFunction]}
  onSubmit={[MockFunction]}
  readOnly={true}
  success={false}
>
  <Component />
</AlmPRDecorationForm>
`;

exports[`should render correctly for single-ALM binding 3`] = `
<AlmPRDecorationForm
  alm="github"
  bindingDefinition={
    Object {
      "appId": "123456",
      "key": "key",
      "privateKey": "asdf1234",
      "url": "http://github.enterprise.com",
    }
  }
  help={
    <FormattedMessage
      defaultMessage="settings.pr_decoration.github.info"
      id="settings.pr_decoration.github.info"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/pr-decoration/"
          >
            learn_more
          </Link>,
        }
      }
    />
  }
  hideKeyField={true}
  loading={false}
  onCancel={[MockFunction]}
  onDelete={[MockFunction]}
  onEdit={[MockFunction]}
  onSubmit={[MockFunction]}
  readOnly={true}
  success={false}
>
  <Component />
</AlmPRDecorationForm>
`;
